- Updated for cobblemon 1.7.0 - minor quality enhancements - added github auto build pipeline