@@ -21,7 +21,6 @@ import net.minecraft.world.item.component.ItemLore;
 import org.bson.Document;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -77,7 +76,7 @@ public class Player
 
     public void updateCache()
     {
-        CobblemonBingo.instance.wrapper.playerCache.put(uuid, this);
+        CobblemonBingo.wrapper.playerCache.put(uuid, this);
     }
 
     public void updateBingo()
@@ -114,10 +113,8 @@ public class Player
             GooeyButton button = GooeyButton.builder()
                     .display(new ItemStack(Items.ENCHANTED_BOOK))
                     .with(DataComponents.CUSTOM_NAME, Component.literal((Util.formattedString("&aBingo"))))
-                    .with(DataComponents.LORE, new ItemLore((Util.formattedComponentList(Arrays.asList("&7Click to view this bingo card")))))
-                    .onClick(b -> {
-                        bingoCard.open(b.getPlayer());
-                    })
+                    .with(DataComponents.LORE, new ItemLore((Util.formattedComponentList(List.of("&7Click to view this bingo card")))))
+                    .onClick(b -> bingoCard.open(b.getPlayer()))
                     .build();
             buttons.add(button);
         });
