@@ -5,7 +5,6 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class Reward
@@ -24,18 +23,16 @@ public class Reward
         this.identifier = id;
         this.icon = new ItemStack(Items.DIRT);
         this.prettyTitle = "&b&lExample Rewards";
-        this.lore = new ArrayList<>(Arrays.asList("&eExample of a rewards"));
-        this.commands = new ArrayList<>(Arrays.asList("broadcast test"));
-        this.messages = new ArrayList<>(Arrays.asList("&eYou've received an example rewards"));
+        this.lore = new ArrayList<>(List.of("&eExample of a rewards"));
+        this.commands = new ArrayList<>(List.of("broadcast test"));
+        this.messages = new ArrayList<>(List.of("&eYou've received an example rewards"));
         this.guiDisplayOrder = 0;
         this.chance = 100;
     }
 
     public void execute(Player player)
     {
-        this.commands.forEach(s -> {
-            Util.runCommand(s.replace("%pl%", player.getUsername()));
-        });
+        this.commands.forEach(s -> Util.runCommand(s.replace("%pl%", player.getUsername())));
         this.messages.forEach(player::sendMessage);
     }
 }
